--- a/partials/step-3.html
+++ b/partials/step-3.html
@@ -268,11 +268,17 @@
 
 <!-- Buttons row -->
 <div class="row">
-	<div class="col-6">
+	<div class="col-4">
 		<a href="#" ng-href="#/step-2" class="btn btn-default">Tilbake</a>	
 	</div>
+	
+	<div class="col-4">
+		<div class="progress">
+			<div class="progress-bar" style="width: 100%;"></div>
+		</div>
+	</div>
 			
-	<div class="col-6">
+	<div class="col-4">
 		<button type="button" class="btn btn-default pull-right" ng-click="save()">Send</button>
 	</div>
 </div>
