--- a/partials/step-3.html
+++ b/partials/step-3.html
@@ -1,3 +1,15 @@
+<div class="container">
+	<!-- Navbar -->
+	<div class="navbar">
+		<ul class="nav navbar-nav">
+			<li ng-class="isStep(1)"><a href="javascript:;">Tilbakemelding</a></li>
+			<li ng-class="isStep(2)"><a href="javascript:;">Opplysninger</a></li>
+			<li ng-class="isStep(3)"><a href="javascript:;">Spørsmål (valgfritt)</a></li>
+			<li ng-class="isStep(4)"><a href="javascript:;">Bekreftelse</a></li>
+		</ul>
+	</div>
+</div>
+
 <!-- Overskrift radios -->
 <div class="row">
 	<div class="col-12">
@@ -263,6 +275,29 @@
 				</tr>
 			</tbody>
 		</table>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-12">
+        <!-- Modal -->
+        <div class="modal fade" id="step3Modal" tabindex="-1" role="dialog" aria-labelledby="step3ModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Informasjon</h4>
+				</div>
+				<div class="modal-body">
+					<p>Det er viktig for oss at du som pasient føler deg hørt og har en så god opplevelse av møtet med oss som mulig. Denne siden gir deg derfor mulighet til å formidle din opplevelse av sykdomssituasjonen med egne ord. I tillegg kan du sete opp en liste med spørsmål/forventninger som du ønsker skal dekkes i din konsultasjon slik at vi er best mulig forberedt.</p>
+					<p>Ditt personvern og sikkerhet er viktig for oss. Det er lagt stor vekt på sikkerhet, og all kommunikasjon krypteres og vil kun tilgjengeliggjøres for de som har et reelt behov.</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-danger" data-dismiss="modal">Nei</button>
+					<button type="button" class="btn btn-success">Ja</button>
+				</div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
 	</div>
 </div>
 
