--- a/partials/step-3.html
+++ b/partials/step-3.html
@@ -4,7 +4,7 @@
 		<ul class="nav navbar-nav">
 			<li ng-class="isStep(1)"><a href="javascript:;">Tilbakemelding</a></li>
 			<li ng-class="isStep(2)"><a href="javascript:;">Opplysninger</a></li>
-			<li ng-class="isStep(3)"><a href="javascript:;">Spørsmål (valgfritt)</a></li>
+			<li ng-class="isStep(3)"><a href="javascript:;">Spørsmål</a></li>
 			<li ng-class="isStep(4)"><a href="javascript:;">Bekreftelse</a></li>
 		</ul>
 	</div>
@@ -32,30 +32,30 @@
 			<thead>
 				<tr>
 					<th></th>
-					<th>Ikke noe tilfreds</th>
-					<th>Lite tilfreds</th>
-					<th>Noe tilfreds</th>
-					<th>Tilfreds</th>
-					<th>Meget tilfreds</th>
+					<th><img src="icons/Smiley5.png"></th>
+					<th><img src="icons/Smiley4.png"></th>
+					<th><img src="icons/Smiley3.png"></th>
+					<th><img src="icons/Smiley2.png"></th>
+					<th><img src="icons/Smiley1.png"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
-					<td>1. Alt i alt, hvor tilfreds er du med oppholdet du har hatt på UNN?</td>
+					<td>1. Alt i alt, hvor tilfreds er du med oppholdet du har hatt på Sykehuset Tromsø?</td>
 					<td>
-						<input type="radio" name="row0" value="1" ng-model="data.tilfredshet[0]" />
+						<input type="radio" name="row0" value="1" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
 					<td>
-						<input type="radio" name="row0" value="2" ng-model="data.tilfredshet[0]" />
+						<input type="radio" name="row0" value="2" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
 					<td>
-						<input type="radio" name="row0" value="3" ng-model="data.tilfredshet[0]" />
+						<input type="radio" name="row0" value="3" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
 					<td>
-						<input type="radio" name="row0" value="4" ng-model="data.tilfredshet[0]" />
+						<input type="radio" name="row0" value="4" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
 					<td>
-						<input type="radio" name="row0" value="5" ng-model="data.tilfredshet[0]" />
+						<input type="radio" name="row0" value="5" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
 				</tr>
 			</tbody>
@@ -65,8 +65,8 @@
 
 <!-- Overskrift radios -->
 <div class="row">
-	<div class="col-12">
-		<h3>Generell tilfredshet ved UNN Tromsø</h3>
+	<div class="col-6">
+		<h3>Dine erfaringer som pasient ved generell poliklinikk ved Sykehuset Tromsø</h3>
 	</div>
 </div>
 
@@ -96,181 +96,181 @@
 				<tr>
 					<td>2. Fikk du tilstrekkelig informasjon i forkant av dagoppholdet/timen?</td>
 					<td>
-						<input type="radio" name="row1" value="1" ng-model="data.tilfredshet[1]" />
+						<input type="radio" name="row1" value="1" ng-model="feedbackData.tilfredshet[1]" />
 					</td>
 					<td>
-						<input type="radio" name="row1" value="2" ng-model="data.tilfredshet[1]" />
+						<input type="radio" name="row1" value="2" ng-model="feedbackData.tilfredshet[1]" />
 					</td>
 					<td>
-						<input type="radio" name="row1" value="3" ng-model="data.tilfredshet[1]" />
+						<input type="radio" name="row1" value="3" ng-model="feedbackData.tilfredshet[1]" />
 					</td>
 					<td>
-						<input type="radio" name="row1" value="4" ng-model="data.tilfredshet[1]" />
+						<input type="radio" name="row1" value="4" ng-model="feedbackData.tilfredshet[1]" />
 					</td>
 					<td>
-						<input type="radio" name="row1" value="5" ng-model="data.tilfredshet[1]" />
+						<input type="radio" name="row1" value="5" ng-model="feedbackData.tilfredshet[1]" />
 					</td>
 				</tr>
 				<tr>
 					<td>3. Ble du tatt godt imot av personalet på sykehuset?</td>
 					<td>
-						<input type="radio" name="row2" value="1" ng-model="data.tilfredshet[2]" />
+						<input type="radio" name="row2" value="1" ng-model="feedbackData.tilfredshet[2]" />
 					</td>
 					<td>
-						<input type="radio" name="row2" value="2" ng-model="data.tilfredshet[2]" />
+						<input type="radio" name="row2" value="2" ng-model="feedbackData.tilfredshet[2]" />
 					</td>
 					<td>
-						<input type="radio" name="row2" value="3" ng-model="data.tilfredshet[2]" />
+						<input type="radio" name="row2" value="3" ng-model="feedbackData.tilfredshet[2]" />
 					</td>
 					<td>
-						<input type="radio" name="row2" value="4" ng-model="data.tilfredshet[2]" />
+						<input type="radio" name="row2" value="4" ng-model="feedbackData.tilfredshet[2]" />
 					</td>
 					<td>
-						<input type="radio" name="row2" value="5" ng-model="data.tilfredshet[2]" />
+						<input type="radio" name="row2" value="5" ng-model="feedbackData.tilfredshet[2]" />
 					</td>
 				</tr>
 				<tr>
 					<td>4. Snakket behandlerne til deg slik at du forsto dem?</td>
 					<td>
-						<input type="radio" name="row3" value="1" ng-model="data.tilfredshet[3]" />
+						<input type="radio" name="row3" value="1" ng-model="feedbackData.tilfredshet[3]" />
 					</td>
 					<td>
-						<input type="radio" name="row3" value="2" ng-model="data.tilfredshet[3]" />
+						<input type="radio" name="row3" value="2" ng-model="feedbackData.tilfredshet[3]" />
 					</td>
 					<td>
-						<input type="radio" name="row3" value="3" ng-model="data.tilfredshet[3]" />
+						<input type="radio" name="row3" value="3" ng-model="feedbackData.tilfredshet[3]" />
 					</td>
 					<td>
-						<input type="radio" name="row3" value="4" ng-model="data.tilfredshet[3]" />
+						<input type="radio" name="row3" value="4" ng-model="feedbackData.tilfredshet[3]" />
 					</td>
 					<td>
-						<input type="radio" name="row3" value="5" ng-model="data.tilfredshet[3]" />
+						<input type="radio" name="row3" value="5" ng-model="feedbackData.tilfredshet[3]" />
 					</td>
 				</tr>
 				<tr>
 					<td>5. Har du tillit til behandlernes faglige dyktighet?</td>
 					<td>
-						<input type="radio" name="row4" value="1" ng-model="data.tilfredshet[4]" />
+						<input type="radio" name="row4" value="1" ng-model="feedbackData.tilfredshet[4]" />
 					</td>
 					<td>
-						<input type="radio" name="row4" value="2" ng-model="data.tilfredshet[4]" />
+						<input type="radio" name="row4" value="2" ng-model="feedbackData.tilfredshet[4]" />
 					</td>
 					<td>
-						<input type="radio" name="row4" value="3" ng-model="data.tilfredshet[4]" />
+						<input type="radio" name="row4" value="3" ng-model="feedbackData.tilfredshet[4]" />
 					</td>
 					<td>
-						<input type="radio" name="row4" value="4" ng-model="data.tilfredshet[4]" />
+						<input type="radio" name="row4" value="4" ng-model="feedbackData.tilfredshet[4]" />
 					</td>
 					<td>
-						<input type="radio" name="row4" value="5" ng-model="data.tilfredshet[4]" />
+						<input type="radio" name="row4" value="5" ng-model="feedbackData.tilfredshet[4]" />
 					</td>
 				</tr>
 				<tr>
 					<td>6. Fikk du vite det du syntes var nødvendig om hvordan prøver, tester eller undersøkelser skulle foregå?</td>
 					<td>
-						<input type="radio" name="row5" value="1" ng-model="data.tilfredshet[5]" />
+						<input type="radio" name="row5" value="1" ng-model="feedbackData.tilfredshet[5]" />
 					</td>
 					<td>
-						<input type="radio" name="row5" value="2" ng-model="data.tilfredshet[5]" />
+						<input type="radio" name="row5" value="2" ng-model="feedbackData.tilfredshet[5]" />
 					</td>
 					<td>
-						<input type="radio" name="row5" value="3" ng-model="data.tilfredshet[5]" />
+						<input type="radio" name="row5" value="3" ng-model="feedbackData.tilfredshet[5]" />
 					</td>
 					<td>
-						<input type="radio" name="row5" value="4" ng-model="data.tilfredshet[5]" />
+						<input type="radio" name="row5" value="4" ng-model="feedbackData.tilfredshet[5]" />
 					</td>
 					<td>
-						<input type="radio" name="row5" value="5" ng-model="data.tilfredshet[5]" />
+						<input type="radio" name="row5" value="5" ng-model="feedbackData.tilfredshet[5]" />
 					</td>
 				</tr>
 				<tr>
 					<td>7. Fikk du tilstrekkelig informasjon om din diagnose /dine plager?</td>
 					<td>
-						<input type="radio" name="row6" value="1" ng-model="data.tilfredshet[6]" />
+						<input type="radio" name="row6" value="1" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
 					<td>
-						<input type="radio" name="row6" value="2" ng-model="data.tilfredshet[6]" />
+						<input type="radio" name="row6" value="2" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
 					<td>
-						<input type="radio" name="row6" value="3" ng-model="data.tilfredshet[6]" />
+						<input type="radio" name="row6" value="3" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
 					<td>
-						<input type="radio" name="row6" value="4" ng-model="data.tilfredshet[6]" />
+						<input type="radio" name="row6" value="4" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
 					<td>
-						<input type="radio" name="row6" value="5" ng-model="data.tilfredshet[6]" />
+						<input type="radio" name="row6" value="5" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
 				</tr>
 				<tr>
 					<td>8. Opplevde du at behandlingen var tilpasset din situasjon?</td>
 					<td>
-						<input type="radio" name="row7" value="1" ng-model="data.tilfredshet[7]" />
+						<input type="radio" name="row7" value="1" ng-model="feedbackData.tilfredshet[7]" />
 					</td>
 					<td>
-						<input type="radio" name="row7" value="2" ng-model="data.tilfredshet[7]" />
+						<input type="radio" name="row7" value="2" ng-model="feedbackData.tilfredshet[7]" />
 					</td>
 					<td>
-						<input type="radio" name="row7" value="3" ng-model="data.tilfredshet[7]" />
+						<input type="radio" name="row7" value="3" ng-model="feedbackData.tilfredshet[7]" />
 					</td>
 					<td>
-						<input type="radio" name="row7" value="4" ng-model="data.tilfredshet[7]" />
+						<input type="radio" name="row7" value="4" ng-model="feedbackData.tilfredshet[7]" />
 					</td>
 					<td>
-						<input type="radio" name="row7" value="5" ng-model="data.tilfredshet[7]" />
+						<input type="radio" name="row7" value="5" ng-model="feedbackData.tilfredshet[7]" />
 					</td>
 				</tr>
 				<tr>
 					<td>9. Var du involvert i avgjørelser som angikk din behandling?</td>
 					<td>
-						<input type="radio" name="row8" value="1" ng-model="data.tilfredshet[8]" />
+						<input type="radio" name="row8" value="1" ng-model="feedbackData.tilfredshet[8]" />
 					</td>
 					<td>
-						<input type="radio" name="row8" value="2" ng-model="data.tilfredshet[8]" />
+						<input type="radio" name="row8" value="2" ng-model="feedbackData.tilfredshet[8]" />
 					</td>
 					<td>
-						<input type="radio" name="row8" value="3" ng-model="data.tilfredshet[8]" />
+						<input type="radio" name="row8" value="3" ng-model="feedbackData.tilfredshet[8]" />
 					</td>
 					<td>
-						<input type="radio" name="row8" value="4" ng-model="data.tilfredshet[8]" />
+						<input type="radio" name="row8" value="4" ng-model="feedbackData.tilfredshet[8]" />
 					</td>
 					<td>
-						<input type="radio" name="row8" value="5" ng-model="data.tilfredshet[8]" />
+						<input type="radio" name="row8" value="5" ng-model="feedbackData.tilfredshet[8]" />
 					</td>
 				</tr>
 				<tr>
 					<td>10. Opplevde du at arbeidet på UNN var godt organisert?</td>
 					<td>
-						<input type="radio" name="row9" value="1" ng-model="data.tilfredshet[9]" />
+						<input type="radio" name="row9" value="1" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
 					<td>
-						<input type="radio" name="row9" value="2" ng-model="data.tilfredshet[9]" />
+						<input type="radio" name="row9" value="2" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
 					<td>
-						<input type="radio" name="row9" value="3" ng-model="data.tilfredshet[9]" />
+						<input type="radio" name="row9" value="3" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
 					<td>
-						<input type="radio" name="row9" value="4" ng-model="data.tilfredshet[9]" />
+						<input type="radio" name="row9" value="4" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
 					<td>
-						<input type="radio" name="row9" value="5" ng-model="data.tilfredshet[9]" />
+						<input type="radio" name="row9" value="5" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
 				</tr>
 				<tr>
 					<td>11. Fikk du intrykk av at UNNs utstyr var i god stand?</td>
 					<td>
-						<input type="radio" name="row10" value="1" ng-model="data.tilfredshet[10]" />
+						<input type="radio" name="row10" value="1" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
 					<td>
-						<input type="radio" name="row10" value="2" ng-model="data.tilfredshet[10]" />
+						<input type="radio" name="row10" value="2" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
 					<td>
-						<input type="radio" name="row10" value="3" ng-model="data.tilfredshet[10]" />
+						<input type="radio" name="row10" value="3" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
 					<td>
-						<input type="radio" name="row10" value="4" ng-model="data.tilfredshet[10]" />
+						<input type="radio" name="row10" value="4" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
 					<td>
-						<input type="radio" name="row10" value="5" ng-model="data.tilfredshet[10]" />
+						<input type="radio" name="row10" value="5" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
 				</tr>
 			</tbody>
@@ -292,8 +292,8 @@
 					<p>Ditt personvern og sikkerhet er viktig for oss. Det er lagt stor vekt på sikkerhet, og all kommunikasjon krypteres og vil kun tilgjengeliggjøres for de som har et reelt behov.</p>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-danger" data-dismiss="modal">Nei</button>
-					<button type="button" class="btn btn-success">Ja</button>
+					<button type="button" class="btn btn-danger pull-left stepModalWidth" data-dismiss="modal">Nei</button>
+					<button type="button" class="btn btn-success stepModalWidth">Ja</button>
 				</div>
             </div><!-- /.modal-content -->
           </div><!-- /.modal-dialog -->
@@ -304,7 +304,7 @@
 <!-- Buttons row -->
 <div class="row">
 	<div class="col-3">
-		<a href="#" ng-href="#/step-2" class="btn btn-default">Tilbake</a>	
+		<a href="#" ng-href="#/step-2" class="btn btn-primary">Tilbake</a>	
 	</div>
 	
 	<div class="col-6">
@@ -314,6 +314,6 @@
 	</div>
 			
 	<div class="col-3">
-		<button type="button" class="btn btn-default pull-right" ng-click="save()">Send</button>
+		<button type="button" class="btn btn-success pull-right" ng-click="save()">Send</button>
 	</div>
 </div>
