--- a/partials/step-3.html
+++ b/partials/step-3.html
@@ -288,12 +288,10 @@
 					<h4 class="modal-title">Informasjon</h4>
 				</div>
 				<div class="modal-body">
-					<p>Det er viktig for oss at du som pasient føler deg hørt og har en så god opplevelse av møtet med oss som mulig. Denne siden gir deg derfor mulighet til å formidle din opplevelse av sykdomssituasjonen med egne ord. I tillegg kan du sete opp en liste med spørsmål/forventninger som du ønsker skal dekkes i din konsultasjon slik at vi er best mulig forberedt.</p>
-					<p>Ditt personvern og sikkerhet er viktig for oss. Det er lagt stor vekt på sikkerhet, og all kommunikasjon krypteres og vil kun tilgjengeliggjøres for de som har et reelt behov.</p>
+					<p>Takk. Din tilbakemelding teller!</p>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-danger pull-left stepModalWidth" data-dismiss="modal">Nei</button>
-					<button type="button" class="btn btn-success stepModalWidth">Ja</button>
+					<button type="button" class="btn btn-success stepModalWidth" ng-click="dismiss()">Ok</button>
 				</div>
             </div><!-- /.modal-content -->
           </div><!-- /.modal-dialog -->
