--- a/partials/step-3.html
+++ b/partials/step-3.html
@@ -5,7 +5,6 @@
 			<li ng-class="isStep(1)"><a href="javascript:;">Tilbakemelding</a></li>
 			<li ng-class="isStep(2)"><a href="javascript:;">Opplysninger</a></li>
 			<li ng-class="isStep(3)"><a href="javascript:;">Spørsmål</a></li>
-			<li ng-class="isStep(4)"><a href="javascript:;">Bekreftelse</a></li>
 		</ul>
 	</div>
 </div>
@@ -32,29 +31,29 @@
 			<thead>
 				<tr>
 					<th></th>
-					<th><img src="icons/Smiley5.png"></th>
-					<th><img src="icons/Smiley4.png"></th>
-					<th><img src="icons/Smiley3.png"></th>
-					<th><img src="icons/Smiley2.png"></th>
-					<th><img src="icons/Smiley1.png"></th>
+					<th class="text-center"><img src="icons/Smiley4.png" class="prep3ImageSize"></th>
+					<th class="text-center"><img src="icons/Smiley3.png" class="prep3ImageSize"></th>
+					<th class="text-center"><img src="icons/Smiley5.png" class="prep3ImageSize"></th>
+					<th class="text-center"><img src="icons/Smiley2.png" class="prep3ImageSize"></th>
+					<th class="text-center"><img src="icons/Smiley1.png" class="prep3ImageSize"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td>1. Alt i alt, hvor tilfreds er du med oppholdet du har hatt på Sykehuset Tromsø?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row0" value="1" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row0" value="2" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row0" value="3" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row0" value="4" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row0" value="5" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
 				</tr>
@@ -85,191 +84,191 @@
 			<thead>
 				<tr>
 					<th></th>
-					<th>Ikke noe tilfreds</th>
-					<th>Lite tilfreds</th>
-					<th>Noe tilfreds</th>
-					<th>Tilfreds</th>
-					<th>Meget tilfreds</th>
+					<th class="text-center"><img src="icons/Smiley4.png" class="prep3ImageSize"></th>
+					<th class="text-center"><img src="icons/Smiley3.png" class="prep3ImageSize"></th>
+					<th class="text-center"><img src="icons/Smiley5.png" class="prep3ImageSize"></th>
+					<th class="text-center"><img src="icons/Smiley2.png" class="prep3ImageSize"></th>
+					<th class="text-center"><img src="icons/Smiley1.png" class="prep3ImageSize"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td>2. Fikk du tilstrekkelig informasjon i forkant av dagoppholdet/timen?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row1" value="1" ng-model="feedbackData.tilfredshet[1]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row1" value="2" ng-model="feedbackData.tilfredshet[1]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row1" value="3" ng-model="feedbackData.tilfredshet[1]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row1" value="4" ng-model="feedbackData.tilfredshet[1]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row1" value="5" ng-model="feedbackData.tilfredshet[1]" />
 					</td>
 				</tr>
 				<tr>
 					<td>3. Ble du tatt godt imot av personalet på sykehuset?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row2" value="1" ng-model="feedbackData.tilfredshet[2]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row2" value="2" ng-model="feedbackData.tilfredshet[2]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row2" value="3" ng-model="feedbackData.tilfredshet[2]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row2" value="4" ng-model="feedbackData.tilfredshet[2]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row2" value="5" ng-model="feedbackData.tilfredshet[2]" />
 					</td>
 				</tr>
 				<tr>
 					<td>4. Snakket behandlerne til deg slik at du forsto dem?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row3" value="1" ng-model="feedbackData.tilfredshet[3]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row3" value="2" ng-model="feedbackData.tilfredshet[3]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row3" value="3" ng-model="feedbackData.tilfredshet[3]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row3" value="4" ng-model="feedbackData.tilfredshet[3]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row3" value="5" ng-model="feedbackData.tilfredshet[3]" />
 					</td>
 				</tr>
 				<tr>
 					<td>5. Har du tillit til behandlernes faglige dyktighet?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row4" value="1" ng-model="feedbackData.tilfredshet[4]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row4" value="2" ng-model="feedbackData.tilfredshet[4]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row4" value="3" ng-model="feedbackData.tilfredshet[4]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row4" value="4" ng-model="feedbackData.tilfredshet[4]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row4" value="5" ng-model="feedbackData.tilfredshet[4]" />
 					</td>
 				</tr>
 				<tr>
 					<td>6. Fikk du vite det du syntes var nødvendig om hvordan prøver, tester eller undersøkelser skulle foregå?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row5" value="1" ng-model="feedbackData.tilfredshet[5]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row5" value="2" ng-model="feedbackData.tilfredshet[5]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row5" value="3" ng-model="feedbackData.tilfredshet[5]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row5" value="4" ng-model="feedbackData.tilfredshet[5]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row5" value="5" ng-model="feedbackData.tilfredshet[5]" />
 					</td>
 				</tr>
 				<tr>
 					<td>7. Fikk du tilstrekkelig informasjon om din diagnose /dine plager?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row6" value="1" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row6" value="2" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row6" value="3" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row6" value="4" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row6" value="5" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
 				</tr>
 				<tr>
 					<td>8. Opplevde du at behandlingen var tilpasset din situasjon?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row7" value="1" ng-model="feedbackData.tilfredshet[7]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row7" value="2" ng-model="feedbackData.tilfredshet[7]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row7" value="3" ng-model="feedbackData.tilfredshet[7]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row7" value="4" ng-model="feedbackData.tilfredshet[7]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row7" value="5" ng-model="feedbackData.tilfredshet[7]" />
 					</td>
 				</tr>
 				<tr>
 					<td>9. Var du involvert i avgjørelser som angikk din behandling?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row8" value="1" ng-model="feedbackData.tilfredshet[8]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row8" value="2" ng-model="feedbackData.tilfredshet[8]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row8" value="3" ng-model="feedbackData.tilfredshet[8]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row8" value="4" ng-model="feedbackData.tilfredshet[8]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row8" value="5" ng-model="feedbackData.tilfredshet[8]" />
 					</td>
 				</tr>
 				<tr>
 					<td>10. Opplevde du at arbeidet på UNN var godt organisert?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row9" value="1" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row9" value="2" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row9" value="3" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row9" value="4" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row9" value="5" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
 				</tr>
 				<tr>
 					<td>11. Fikk du intrykk av at UNNs utstyr var i god stand?</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row10" value="1" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row10" value="2" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row10" value="3" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row10" value="4" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
-					<td>
+					<td class="text-center">
 						<input type="radio" name="row10" value="5" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
 				</tr>
