--- a/partials/step-2.html
+++ b/partials/step-2.html
@@ -1,12 +1,18 @@
-<div class="container">
-	<!-- Navbar -->
-	<div class="navbar">
-		<ul class="nav navbar-nav">
-			<li ng-class="isStep(1)"><a href="javascript:;">Tilbakemelding</a></li>
-			<li ng-class="isStep(2)"><a href="javascript:;">Opplysninger</a></li>
-			<li ng-class="isStep(3)"><a href="javascript:;">Spørsmål</a></li>
-		</ul>
+<div class="row">
+	<div class="col-6">
+		<!-- Navbar -->
+		<div class="navbar">
+			<ul class="nav nav-tabs">
+				<li ng-class="isStep(1)"><a href="javascript:;">Tilbakemelding</a></li>
+				<li ng-class="isStep(2)"><a href="javascript:;">Opplysninger</a></li>
+				<li ng-class="isStep(3)"><a href="javascript:;">Spørsmål</a></li>
+			</ul>
+		</div>
 	</div>
+
+	<div class="col-6">
+      <img src="icons/Vestre Viken.png" class="img-rounded pull-right">
+    </div>
 </div>
 
 <!-- Overskrift forms -->
