--- a/partials/prep1.html
+++ b/partials/prep1.html
@@ -95,6 +95,6 @@
 <div class="row">
   <div class="col-12">
     <a type="button" class="btn btn-danger pull-left" href="#" ng-href="#/main">Avbryt</a>
-    <button type="button" class="btn btn-success pull-right" ng-click="add()">Lagre</button>
+    <button type="button" class="btn btn-success pull-right" ng-click="next()">Lagre</button>
   </div>
 </div>
