--- a/partials/prep2.html
+++ b/partials/prep2.html
@@ -1,25 +1,42 @@
-
 <div class="row">
     <div class="col-12">
-        <!-- Modal -->
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Modal title</h4>
-              </div>
-              <div class="modal-body">
-                ...
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
-            </div><!-- /.modal-content -->
-          </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
+        <img src="icons/Vestre Viken.png" class="img-rounded pull-right">
     </div>
 </div>
 
+<div class="row">
+    <div class="col-12">
+        <h3>Pasientens egenregistrerte opplysninger før konsultasjon</h3>
+    </div>
+</div>
 
+<div class="row">
+    <div class="col-12">
+        <h4>Pasientens subjektive beskrivelse</h4>
+        <p>
+            {{prepData.beskrivelse}}
+        </p>
+    </div>
+</div>
+
+<div class="row">
+  <div class="col-12">
+    <h4>Pasientens subjektive beskrivelse</h4>
+    <div class="panel panel-default" style="margin-top: 10px;" ng-hide="!prepData.temadata.length">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Tema</th>
+            <th>Tekst</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="tema in prepData.temadata">
+            <td>{{tema.tittel}}</td>
+            <td>{{tema.tekst}}</td>
+          </tr>
+        </tbody>  
+      </table>
+    </div>
+  </div>
+</div>
