--- a/partials/prep2.html
+++ b/partials/prep2.html
@@ -16,9 +16,9 @@
     <div class="row">
         <div class="col-12">
             <h4>Pasientens subjektive beskrivelse</h4>
-            <p>
-                {{prepData.beskrivelse}}
-            </p>
+            <ul class="list-group">
+                <li class="list-group-item">{{prepData.beskrivelse}}</li>
+            </ul>
         </div>
     </div>
 
