--- a/partials/step-3.html
+++ b/partials/step-3.html
@@ -18,7 +18,7 @@
 <!-- Overskrift radios -->
 <div class="row">
 	<div class="col-12">
-		<h3>Generell tilfredshet ved UNN Tromsø</h3>
+		<h3>Generell tilfredshet ved Sykehuset Tromsø</h3>
 	</div>
 </div>
 
@@ -189,7 +189,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td>7. Fikk du tilstrekkelig informasjon om din diagnose /dine plager?</td>
+					<td>7. Fikk du tilstrekkelig informasjon om din diagnose/dine plager?</td>
 					<td class="text-center">
 						<input type="radio" name="row6" value="1" ng-model="feedbackData.tilfredshet[6]" />
 					</td>
@@ -243,7 +243,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td>10. Opplevde du at arbeidet på UNN var godt organisert?</td>
+					<td>10. Opplevde du at arbeidet på sykehuset var godt organisert?</td>
 					<td class="text-center">
 						<input type="radio" name="row9" value="1" ng-model="feedbackData.tilfredshet[9]" />
 					</td>
@@ -261,7 +261,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td>11. Fikk du intrykk av at UNNs utstyr var i god stand?</td>
+					<td>11. Fikk du intrykk av at sykehusets utstyr var i god stand?</td>
 					<td class="text-center">
 						<input type="radio" name="row10" value="1" ng-model="feedbackData.tilfredshet[10]" />
 					</td>
