--- a/partials/step-3.html
+++ b/partials/step-3.html
@@ -18,7 +18,7 @@
 <!-- Overskrift radios -->
 <div class="row">
 	<div class="col-12">
-		<h3>Generell tilfredshet ved Sykehuset Tromsø</h3>
+		<h3>Generell tilfredshet ved sykehuset</h3>
 	</div>
 </div>
 
@@ -46,7 +46,7 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>1. Alt i alt, hvor tilfreds er du med oppholdet du har hatt på Sykehuset Tromsø?</td>
+					<td>1. Alt i alt, hvor tilfreds er du med oppholdet du har hatt på sykehuset?</td>
 					<td class="text-center">
 						<input type="radio" name="row0" value="1" ng-model="feedbackData.tilfredshet[0]" />
 					</td>
@@ -71,7 +71,7 @@
 <!-- Overskrift radios -->
 <div class="row">
 	<div class="col-6">
-		<h3>Dine erfaringer som pasient ved Sykehuset Tromsø</h3>
+		<h3>Dine erfaringer som pasient ved sykehuset</h3>
 	</div>
 </div>
 
