--- a/partials/prep2.html
+++ b/partials/prep2.html
@@ -1,5 +1,8 @@
 <div class="row prep2Image">
-    <div class="col-12">
+    <div class="col-6">
+        <h2>Journalnotat</h2>
+    </div>
+    <div class="col-6">
         <img src="icons/Vestre Viken.png" class="img-rounded pull-right">
     </div> 
 </div>
