--- a/partials/prep1.html
+++ b/partials/prep1.html
@@ -63,7 +63,7 @@
     <div class="form-group">
       <input id="tematekst" class="form-control" rows="4" placeholder="Beskriv ditt tema her" ng-model="temaTekst" ng-disabled="prepData.temadata.length > 5"></input> 
     </div>
-    <button type="button" class="btn btn-primary pull-right" ng-click="add()" ng-disabled="!temaTittel.length || !temaTekst.length || prepData.temadata.length > 5">Legg tema til</button>
+    <button type="button" class="btn btn-primary btn-lg pull-right" ng-click="add()" ng-disabled="!temaTittel.length || !temaTekst.length || prepData.temadata.length > 5">Legg tema til</button>
   </div>
 </div>
 
@@ -82,7 +82,7 @@
           <tr ng-repeat="tema in prepData.temadata">
             <td>{{tema.tittel}}</td>
             <td>{{tema.tekst}}</td>
-            <td><button type="button" class="btn btn-danger pull-right" ng-click="remove($index)">Slett</button></td>
+            <td><button type="button" class="btn btn-danger btn-lg pull-right" ng-click="remove($index)">Slett</button></td>
           </tr>
         </tbody>  
       </table>
@@ -94,7 +94,7 @@
 
 <div class="row">
   <div class="col-12">
-    <a type="button" class="btn btn-danger pull-left" href="#" ng-href="#/main">Avbryt</a>
-    <button type="button" class="btn btn-success pull-right" ng-click="next()">Lagre</button>
+    <a type="button" class="btn btn-danger btn-lg pull-left" href="#" ng-href="#/main">Avbryt</a>
+    <button type="button" class="btn btn-success btn-lg pull-right" ng-click="next()">Lagre</button>
   </div>
 </div>
