--- a/partials/step-2.html
+++ b/partials/step-2.html
@@ -98,7 +98,7 @@
 <!-- Buttons row -->
 <div class="row">
 	<div class="col-3">
-		<a href="#" ng-href="#/step-1" class="btn btn-primary">Tilbake</a>	
+		<a href="#" ng-href="#/step-1" class="btn btn-primary btn-lg">Tilbake</a>	
 	</div>
 	
 	<div class="col-6">
@@ -108,6 +108,6 @@
 	</div>
 			
 	<div class="col-3">
-		<a href="#" ng-href="#/step-3" class="btn btn-primary pull-right">Neste</a>
+		<a href="#" ng-href="#/step-3" class="btn btn-primary btn-lg pull-right">Neste</a>
 	</div>
 </div>
