--- a/partials/step-3.html
+++ b/partials/step-3.html
@@ -307,7 +307,7 @@
 <!-- Buttons row -->
 <div class="row">
 	<div class="col-3">
-		<a href="#" ng-href="#/step-2" class="btn btn-primary">Tilbake</a>	
+		<a href="#" ng-href="#/step-2" class="btn btn-primary btn-lg">Tilbake</a>	
 	</div>
 	
 	<div class="col-6">
@@ -317,6 +317,6 @@
 	</div>
 			
 	<div class="col-3">
-		<button type="button" class="btn btn-success pull-right" ng-click="save()">Send</button>
+		<button type="button" class="btn btn-success btn-lg pull-right" ng-click="save()">Send</button>
 	</div>
 </div>
